--- a/IntranetEpitech2/app/src/main/res/layout/fragment_profil.xml
+++ b/IntranetEpitech2/app/src/main/res/layout/fragment_profil.xml
@@ -14,7 +14,20 @@
         android:id="@+id/photo"
         android:layout_weight="0.22"
         android:src="@drawable/ic_launcher"
+        android:layout_marginTop="54dp"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginLeft="65dp"
+        android:layout_marginStart="65dp" />
+    
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/photo"
+        android:id="@+id/log"
+        android:layout_marginTop="43dp"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
 
 </RelativeLayout>
