--- a/IntranetEpitech2/app/src/main/res/layout/activity_login.xml
+++ b/IntranetEpitech2/app/src/main/res/layout/activity_login.xml
@@ -1,38 +1,49 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:gravity="center_horizontal"
+    android:layout_height="match_parent" android:gravity="center_vertical|center_horizontal"
     android:orientation="vertical" android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin" tools:context=".LoginActivity">
+    android:paddingTop="@dimen/activity_vertical_margin" tools:context=".LoginActivity"
+    android:backgroundTint="#ff1fc9ff"
+    android:id="@+id/"
+    android:background="#ff2fb5ff"
+    android:weightSum="1">
 
     <!-- Login progress -->
     <ProgressBar android:id="@+id/login_progress" style="?android:attr/progressBarStyleLarge"
         android:layout_width="wrap_content" android:layout_height="wrap_content"
         android:layout_marginBottom="8dp" android:visibility="gone" />
 
+    <AutoCompleteTextView android:id="@+id/email" android:layout_width="match_parent"
+        android:layout_height="wrap_content" android:hint="@string/prompt_login"
+        android:maxLines="1"
+        android:singleLine="true"
+        android:layout_weight="0.12"
+        android:textSize="40dp" />
+
+    <EditText android:id="@+id/password" android:layout_width="match_parent"
+        android:layout_height="wrap_content" android:hint="@string/prompt_password"
+        android:imeActionId="@+id/login"
+        android:imeActionLabel="@string/action_sign_in_short"
+        android:imeOptions="actionUnspecified" android:inputType="textPassword"
+        android:maxLines="1" android:singleLine="true"
+        android:layout_weight="0.12"
+        android:textSize="40dp" />
+
+    <Button android:id="@+id/email_sign_in_button" style="@android:style/Animation"
+        android:layout_width="323dp" android:layout_height="wrap_content"
+        android:layout_marginTop="16dp" android:text="@string/action_sign_in"
+        android:textStyle="bold"
+        android:theme="@style/Base.TextAppearance.AppCompat"
+        android:background="#ff2c8dcd"
+        android:layout_weight="0.12" />
+
     <ScrollView android:id="@+id/login_form" android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="69dp">
 
         <LinearLayout android:id="@+id/email_login_form" android:layout_width="match_parent"
             android:layout_height="wrap_content" android:orientation="vertical">
-
-            <AutoCompleteTextView android:id="@+id/email" android:layout_width="match_parent"
-                android:layout_height="wrap_content" android:hint="@string/prompt_login"
-                android:maxLines="1"
-                android:singleLine="true" />
-
-            <EditText android:id="@+id/password" android:layout_width="match_parent"
-                android:layout_height="wrap_content" android:hint="@string/prompt_password"
-                android:imeActionId="@+id/login"
-                android:imeActionLabel="@string/action_sign_in_short"
-                android:imeOptions="actionUnspecified" android:inputType="textPassword"
-                android:maxLines="1" android:singleLine="true" />
-
-            <Button android:id="@+id/email_sign_in_button" style="?android:textAppearanceSmall"
-                android:layout_width="match_parent" android:layout_height="wrap_content"
-                android:layout_marginTop="16dp" android:text="@string/action_sign_in"
-                android:textStyle="bold" />
 
         </LinearLayout>
     </ScrollView>
