--- a/IntranetEpitech2/app/src/main/res/layout/activity_profil.xml
+++ b/IntranetEpitech2/app/src/main/res/layout/activity_profil.xml
@@ -2,4 +2,5 @@
     xmlns:tools="http://schemas.android.com/tools" android:id="@+id/container"
     android:layout_width="match_parent" android:layout_height="match_parent"
     tools:context="com.epitech.intra.intranetepitech.ProfilActivity"
-    tools:ignore="MergeRootFrame" />
+    tools:ignore="MergeRootFrame"
+    android:background="#ff2fb5ff" />
