--- a/IntranetEpitech2/app/src/main/res/layout/fragment_grade.xml
+++ b/IntranetEpitech2/app/src/main/res/layout/fragment_grade.xml
@@ -4,7 +4,8 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.epitech.intra.intranetepitech.GradeActivity$PlaceholderFragment">
+    tools:context="com.epitech.intra.intranetepitech.GradeActivity$PlaceholderFragment"
+    android:background="#ff2fb5ff">
 
     <ListView
         android:layout_width="wrap_content"
