--- a/IntranetEpitech2/app/src/main/res/layout/fragment_token.xml
+++ b/IntranetEpitech2/app/src/main/res/layout/fragment_token.xml
@@ -4,7 +4,8 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.epitech.intra.intranetepitech.TokenActivity$PlaceholderFragment">
+    tools:context="com.epitech.intra.intranetepitech.TokenActivity$PlaceholderFragment"
+    android:background="#ff2fb5ff">
 
     <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
