--- a/IntranetEpitech2/app/src/main/res/layout/activity_login.xml
+++ b/IntranetEpitech2/app/src/main/res/layout/activity_login.xml
@@ -16,20 +16,18 @@
         android:layout_marginBottom="8dp" android:visibility="gone" />
 
     <AutoCompleteTextView android:id="@+id/email" android:layout_width="match_parent"
-        android:layout_height="wrap_content" android:hint="@string/prompt_login"
+        android:layout_height="54dp" android:hint="@string/prompt_login"
         android:maxLines="1"
         android:singleLine="true"
-        android:layout_weight="0.12"
-        android:textSize="40dp" />
+        android:textSize="30dp" />
 
     <EditText android:id="@+id/password" android:layout_width="match_parent"
-        android:layout_height="wrap_content" android:hint="@string/prompt_password"
+        android:layout_height="54dp" android:hint="@string/prompt_password"
         android:imeActionId="@+id/login"
         android:imeActionLabel="@string/action_sign_in_short"
         android:imeOptions="actionUnspecified" android:inputType="textPassword"
         android:maxLines="1" android:singleLine="true"
-        android:layout_weight="0.12"
-        android:textSize="40dp" />
+        android:textSize="30dp" />
 
     <Button android:id="@+id/email_sign_in_button" style="@android:style/Animation"
         android:layout_width="323dp" android:layout_height="wrap_content"
