--- a/IntranetEpitech2/app/src/main/res/layout/fragment_module_detail.xml
+++ b/IntranetEpitech2/app/src/main/res/layout/fragment_module_detail.xml
@@ -4,12 +4,11 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.epitech.intra.intranetepitech.PlanningActivity$PlaceholderFragment"
-    android:background="#ff2fb5ff">
+    tools:context="com.epitech.intra.intranetepitech.ModuleDetail$PlaceholderFragment">
 
-    <ListView
+    <TextView
+        android:text="@string/hello_world"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id ="@+id/planning">
-    </ListView>
+        android:layout_height="wrap_content" />
+
 </RelativeLayout>
