--- a/IntranetEpitech2/app/src/main/res/layout/fragment_module_detail.xml
+++ b/IntranetEpitech2/app/src/main/res/layout/fragment_module_detail.xml
@@ -4,11 +4,23 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.epitech.intra.intranetepitech.ModuleDetail$PlaceholderFragment">
+    tools:context="com.epitech.intra.intranetepitech.ModuleDetail$PlaceholderFragment"
+    >
 
     <TextView
-        android:text="@string/hello_world"
+        android:id="@+id/name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
+
+    <TextView
+        android:id="@+id/date"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+    <EditText
+        android:id="@+id/token"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="visible" />
 
 </RelativeLayout>
