--- a/IntranetEpitech2/app/src/main/res/layout/fragment_module_detail.xml
+++ b/IntranetEpitech2/app/src/main/res/layout/fragment_module_detail.xml
@@ -5,7 +5,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.epitech.intra.intranetepitech.ModuleDetail$PlaceholderFragment"
-    >
+    android:background="#ff2fb5ff">
     <TableLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
